--- a/pages/local-platform/detail/detail.wxss
+++ b/pages/local-platform/detail/detail.wxss
@@ -1,2 +1,12 @@
 @import "../../alumni-association/detail/detail.wxss";
 
+/* 加载更多和没有更多样式 */
+.loading-more, .no-more {
+  text-align: center;
+  padding: 40rpx;
+  color: #999;
+  font-size: 26rpx;
+  width: 100%;
+  display: block;
+}
+
