--- a/pages/alumni-association/member/member.wxml
+++ b/pages/alumni-association/member/member.wxml
@@ -111,17 +111,14 @@
             </view>
           </scroll-view>
         </view>
-        <view class="form-item search-group" catchtap="preventBubble">
+        <view class="form-item">
           <text class="label">校友会身份</text>
-          <view class="role-selector" bindtap="toggleRoleSelector">
-            <text class="selector-text">{{inviteForm.roleOrName || '请选择身份'}}</text>
-            <text class="selector-arrow">▼</text>
-          </view>
-          <scroll-view scroll-y class="search-results" wx:if="{{showRoleSelector && roleList.length > 0}}">
-            <view wx:for="{{roleList}}" wx:key="roleOrId" class="search-item" bindtap="selectRole" data-index="{{index}}">
-              <text class="role-name">{{item.roleOrName}}</text>
+          <picker bindchange="onRoleChange" range="{{roleList}}" range-key="roleOrName" value="{{inviteForm.roleIndex || 0}}">
+            <view class="role-selector">
+              <text class="selector-text">{{inviteForm.roleOrName || '请选择身份'}}</text>
+              <text class="selector-arrow">▼</text>
             </view>
-          </scroll-view>
+          </picker>
         </view>
       </view>
       <view class="modal-footer">
@@ -147,17 +144,14 @@
             <text class="member-name-display">{{editingMember.name || editingMember.nickname || '未命名'}}</text>
           </view>
         </view>
-        <view class="form-item search-group" catchtap="preventBubble">
+        <view class="form-item">
           <text class="label">校友会身份</text>
-          <view class="role-selector" bindtap="toggleEditRoleSelector">
-            <text class="selector-text">{{editingMember.newRoleName || (editingMember.organizeArchiRole && editingMember.organizeArchiRole.roleOrName) || '请选择身份'}}</text>
-            <text class="selector-arrow">▼</text>
-          </view>
-          <scroll-view scroll-y class="search-results" wx:if="{{showEditRoleSelector && roleList.length > 0}}">
-            <view wx:for="{{roleList}}" wx:key="roleOrId" class="search-item" bindtap="selectEditRole" data-index="{{index}}">
-              <text class="role-name">{{item.roleOrName}}</text>
+          <picker bindchange="onEditRoleChange" range="{{roleList}}" range-key="roleOrName" value="{{editingMember.roleIndex || 0}}">
+            <view class="role-selector">
+              <text class="selector-text">{{editingMember.newRoleName || (editingMember.organizeArchiRole && editingMember.organizeArchiRole.roleOrName) || '请选择身份'}}</text>
+              <text class="selector-arrow">▼</text>
             </view>
-          </scroll-view>
+          </picker>
         </view>
       </view>
       <view class="modal-footer">
